[project]
name = "QianYi-API-validation-engine"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hardefarogonondo", email = "hardefarogonondo@gmail.com"},
]
dependencies = ["requests>=2.32.5", "pandas>=2.3.3", "google-cloud-bigquery>=3.40.1", "cryptography>=46.0.5"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
